--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <div class="hintBox" id="hintBox" aria-live="polite">
         <b>Hint:</b> (press “Hint” if you want one)
       </div>
-      <div class="footerTip">Tip: You can use your physical keyboard too.</div>
+      <div class="footerTip">Cheating only hurts yourselves!</div>
     </section>
 
     <!-- Right: Word + keyboard -->
@@ -547,4 +547,5 @@
     resetGame(true);
   </script>
 </body>
+
 </html>
